fix hover effect on mobile, add linkpop icon

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,9 +21,3 @@ html, body {
   max-width: 1280px;
   margin: auto;
 }
-
-html @media(pointer: coarse) {
-  *:hover {
-    all:unset!important;
-  }
-}
